fix width nav on smallscreen.css

--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -15,7 +15,7 @@ html,body {
 #nav-primary {
 	height: 48px;
 	padding-left: 87px;
-	width: 100%
+	width: 480px;
 }
 	#nav-primary li a {
 		font-size: 1em;
